5-ProdReadyNetworkRouting/rule-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ana-yonlendirici
spec:
  ingressClassName: traefik # K8s'in bizden istediği yeni ve modern tanımlama
  rules:
  # 1. Kural: .NET API
  - host: api.ozgur.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dotnet-api-servisi
            port:
              number: 80
  # 2. Kural: React Uygulaması
  - host: app.ozgur.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-servisi
            port:
              number: 80
  # 3. Kural: Prompter Nginx
  - host: prompter.ozgur.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prompter-nginx-service
            port:
              number: 80
  # 4. Kural: Statik Web
  - host: web.ozgur.lokal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: profesyonel-nginx-servisi
            port:
              number: 80
